Sync tessera version update #20
Signed-off-by: coolc4 <19464572@qq.com>