@@ -1,7 +1,10 @@
 package com.quorum.tessera.transaction;
 
 import com.jpmorgan.quorum.mock.servicelocator.MockServiceLocator;
-import com.quorum.tessera.config.*;
+import com.quorum.tessera.config.AppType;
+import com.quorum.tessera.config.CommunicationType;
+import com.quorum.tessera.config.Config;
+import com.quorum.tessera.config.ServerConfig;
 import com.quorum.tessera.data.*;
 import com.quorum.tessera.enclave.*;
 import com.quorum.tessera.encryption.EncryptorException;
@@ -12,8 +15,6 @@ import com.quorum.tessera.transaction.exception.PrivacyViolationException;
 import com.quorum.tessera.transaction.exception.RecipientKeyNotFoundException;
 import com.quorum.tessera.transaction.exception.TransactionNotFoundException;
 import com.quorum.tessera.transaction.publish.BatchPayloadPublisher;
-import com.quorum.tessera.transaction.publish.PayloadPublisher;
-import com.quorum.tessera.transaction.publish.PublishPayloadException;
 import com.quorum.tessera.transaction.resend.ResendManager;
 import com.quorum.tessera.util.Base64Codec;
 import org.junit.After;
@@ -23,8 +24,6 @@ import org.mockito.ArgumentCaptor;
 
 import java.util.*;
 import java.util.concurrent.Callable;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static java.util.Collections.*;
 import static org.assertj.core.api.Assertions.*;
@@ -40,8 +39,6 @@ public class TransactionManagerTest {
 
     private EncryptedRawTransactionDAO encryptedRawTransactionDAO;
 
-    private PayloadPublisher payloadPublisher;
-
     private ResendManager resendManager;
 
     private Enclave enclave;
@@ -56,41 +53,32 @@ public class TransactionManagerTest {
     public void onSetUp() {
         payloadEncoder = mock(PayloadEncoder.class);
         enclave = mock(Enclave.class);
-
         encryptedTransactionDAO = mock(EncryptedTransactionDAO.class);
         encryptedRawTransactionDAO = mock(EncryptedRawTransactionDAO.class);
-        payloadPublisher = mock(PayloadPublisher.class);
-        this.resendManager = mock(ResendManager.class);
-        this.privacyHelper = new PrivacyHelperImpl(encryptedTransactionDAO, true);
+        resendManager = mock(ResendManager.class);
+        privacyHelper = new PrivacyHelperImpl(encryptedTransactionDAO, true);
         batchPayloadPublisher = mock(BatchPayloadPublisher.class);
+
         transactionManager =
                 new TransactionManagerImpl(
                         Base64Codec.create(),
                         payloadEncoder,
                         encryptedTransactionDAO,
-                        payloadPublisher,
                         batchPayloadPublisher,
                         enclave,
                         encryptedRawTransactionDAO,
                         resendManager,
-                        privacyHelper,
-                        1000);
+                        privacyHelper);
     }
 
     @After
     public void onTearDown() {
-        verifyNoMoreInteractions(
-                payloadEncoder,
-                encryptedTransactionDAO,
-                payloadPublisher,
-                enclave,
-                resendManager,
-                batchPayloadPublisher);
+        verifyNoMoreInteractions(enclave, resendManager, batchPayloadPublisher);
+        verifyNoMoreInteractions(payloadEncoder, encryptedTransactionDAO);
     }
 
     @Test
     public void send() {
-
         EncodedPayload encodedPayload = mock(EncodedPayload.class);
 
         when(encodedPayload.getCipherText()).thenReturn("CIPHERTEXT".getBytes());
@@ -112,12 +100,14 @@ public class TransactionManagerTest {
         SendResponse result = transactionManager.send(sendRequest);
 
         assertThat(result).isNotNull();
+        assertThat(result.getTransactionHash().toString()).isEqualTo("Q0lQSEVSVEVYVA==");
+        assertThat(result.getManagedParties()).containsExactly(receiver);
 
         verify(enclave).encryptPayload(any(), any(), any(), any(), any(), any());
         verify(payloadEncoder).encode(encodedPayload);
         verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
         verify(enclave).getForwardingKeys();
-        verify(enclave, times(2)).getPublicKeys();
+        verify(enclave, times(3)).getPublicKeys();
     }
 
     @Test
@@ -153,18 +143,19 @@ public class TransactionManagerTest {
         SendResponse result = transactionManager.send(sendRequest);
 
         assertThat(result).isNotNull();
+        assertThat(result.getTransactionHash().toString()).isEqualTo("Q0lQSEVSVEVYVA==");
+        assertThat(result.getManagedParties()).isEmpty();
 
         verify(enclave).encryptPayload(any(), any(), any(), any(), any(), any());
         verify(payloadEncoder).encode(encodedPayload);
         verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
         verify(enclave).getForwardingKeys();
-        verify(enclave, times(2)).getPublicKeys();
+        verify(enclave, times(3)).getPublicKeys();
         verify(batchPayloadPublisher).publishPayload(any(), anyList());
     }
 
     @Test
     public void sendWithDuplicateRecipients() {
-
         EncodedPayload encodedPayload = mock(EncodedPayload.class);
 
         when(encodedPayload.getCipherText()).thenReturn("CIPHERTEXT".getBytes());
@@ -185,23 +176,16 @@ public class TransactionManagerTest {
         SendResponse result = transactionManager.send(sendRequest);
 
         assertThat(result).isNotNull();
+        assertThat(result.getTransactionHash().toString()).isEqualTo("Q0lQSEVSVEVYVA==");
+        assertThat(result.getManagedParties()).isEmpty();
 
         verify(enclave).encryptPayload(any(), any(), any(), any(), any(), any());
         verify(payloadEncoder).encode(encodedPayload);
         verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
         verify(enclave).getForwardingKeys();
-        verify(enclave, times(2)).getPublicKeys();
+        verify(enclave, times(3)).getPublicKeys();
     }
-    /*
-           doAnswer(invocation -> {
-               Callable callable = invocation.getArgument(1);
-               callable.call();
-               return mock(EncryptedTransaction.class);
-           }).when(encryptedTransactionDAO).save(any(EncryptedTransaction.class),any(Callable.class));
 
-
-           when(payloadEncoder.forRecipient(any(EncodedPayload.class),any(PublicKey.class))).thenReturn(encodedPayload);
-    */
     @Test
     public void sendSignedTransaction() {
 
@@ -233,13 +217,15 @@ public class TransactionManagerTest {
         SendResponse result = transactionManager.sendSignedTransaction(sendSignedRequest);
 
         assertThat(result).isNotNull();
+        assertThat(result.getTransactionHash()).isEqualTo(new MessageHash("HASH".getBytes()));
+        assertThat(result.getManagedParties()).containsExactly(receiver);
 
         verify(enclave).encryptPayload(any(RawTransaction.class), any(), any(), any(), any());
         verify(payloadEncoder).encode(payload);
         verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
         verify(encryptedRawTransactionDAO).retrieveByHash(any(MessageHash.class));
         verify(enclave).getForwardingKeys();
-        verify(enclave, times(2)).getPublicKeys();
+        verify(enclave, times(3)).getPublicKeys();
     }
 
     @Test
@@ -282,19 +268,20 @@ public class TransactionManagerTest {
         SendResponse result = transactionManager.sendSignedTransaction(sendSignedRequest);
 
         assertThat(result).isNotNull();
+        assertThat(result.getTransactionHash()).isEqualTo(new MessageHash("HASH".getBytes()));
+        assertThat(result.getManagedParties()).isEmpty();
 
         verify(enclave).encryptPayload(any(RawTransaction.class), any(), any(), any(), any());
         verify(payloadEncoder).encode(payload);
         verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
         verify(encryptedRawTransactionDAO).retrieveByHash(any(MessageHash.class));
         verify(enclave).getForwardingKeys();
-        verify(enclave, times(2)).getPublicKeys();
+        verify(enclave, times(3)).getPublicKeys();
         verify(batchPayloadPublisher).publishPayload(any(), anyList());
     }
 
     @Test
     public void sendSignedTransactionWithDuplicateRecipients() {
-
         EncodedPayload payload = mock(EncodedPayload.class);
 
         EncryptedRawTransaction encryptedRawTransaction =
@@ -321,13 +308,15 @@ public class TransactionManagerTest {
         SendResponse result = transactionManager.sendSignedTransaction(sendSignedRequest);
 
         assertThat(result).isNotNull();
+        assertThat(result.getTransactionHash()).isEqualTo(new MessageHash("HASH".getBytes()));
+        assertThat(result.getManagedParties()).isEmpty();
 
         verify(enclave).encryptPayload(any(RawTransaction.class), any(), any(), any(), any());
         verify(payloadEncoder).encode(payload);
         verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class), any(Callable.class));
         verify(encryptedRawTransactionDAO).retrieveByHash(any(MessageHash.class));
         verify(enclave).getForwardingKeys();
-        verify(enclave, times(2)).getPublicKeys();
+        verify(enclave, times(3)).getPublicKeys();
     }
 
     @Test
@@ -364,10 +353,12 @@ public class TransactionManagerTest {
         EncodedPayload payload = mock(EncodedPayload.class);
 
         when(payload.getCipherText()).thenReturn("CIPHERTEXT".getBytes());
+        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class))).thenReturn(Optional.empty());
 
         transactionManager.storePayload(payload);
 
         verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class));
+        verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
         verify(payloadEncoder).encode(payload);
         verify(enclave).getPublicKeys();
         verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
@@ -421,17 +412,17 @@ public class TransactionManagerTest {
 
     @Test
     public void storePayloadAsRecipientWithPrivateStateConsensus() {
-
-        byte[] input = "SOMEDATA".getBytes();
-
         EncodedPayload payload = mock(EncodedPayload.class);
 
         when(payload.getCipherText()).thenReturn("CIPHERTEXT".getBytes());
         when(payload.getPrivacyMode()).thenReturn(PrivacyMode.PRIVATE_STATE_VALIDATION);
 
+        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class))).thenReturn(Optional.empty());
+
         transactionManager.storePayload(payload);
 
         verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class));
+        verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
         verify(payloadEncoder).encode(payload);
         verify(enclave).getPublicKeys();
         verify(enclave).findInvalidSecurityHashes(any(), any());
@@ -573,9 +564,6 @@ public class TransactionManagerTest {
 
     @Test
     public void storePayloadWithInvalidSecurityHashesIgnoreIfNotPsv() {
-
-        final byte[] input = "SOMEDATA".getBytes();
-
         Map<TxHash, SecurityHash> affectedTx =
                 Map.of(TxHash.from("invalidHash".getBytes()), SecurityHash.from("security".getBytes()));
 
@@ -583,16 +571,14 @@ public class TransactionManagerTest {
         when(payload.getSenderKey()).thenReturn(PublicKey.from("sender".getBytes()));
         when(payload.getCipherText()).thenReturn("CIPHERTEXT".getBytes());
         when(payload.getCipherTextNonce()).thenReturn(new Nonce("nonce".getBytes()));
-
-        RecipientBox recipientBox = mock(RecipientBox.class);
-        when(recipientBox.getData()).thenReturn("box1".getBytes());
-
-        when(payload.getRecipientBoxes()).thenReturn(List.of(recipientBox));
+        when(payload.getRecipientBoxes()).thenReturn(List.of(RecipientBox.from("box1".getBytes())));
         when(payload.getRecipientNonce()).thenReturn(new Nonce("recipientNonce".getBytes()));
         when(payload.getRecipientKeys()).thenReturn(singletonList(PublicKey.from("recipient".getBytes())));
         when(payload.getPrivacyMode()).thenReturn(PrivacyMode.PARTY_PROTECTION);
         when(payload.getAffectedContractTransactions()).thenReturn(affectedTx);
         when(payload.getExecHash()).thenReturn("execHash".getBytes());
+
+        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class))).thenReturn(Optional.empty());
 
         ArgumentCaptor<EncodedPayload> payloadCaptor = ArgumentCaptor.forClass(EncodedPayload.class);
         when(enclave.findInvalidSecurityHashes(any(), any()))
@@ -609,579 +595,265 @@ public class TransactionManagerTest {
 
         verify(encryptedTransactionDAO).findByHashes(any());
         verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class));
+        verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
         verify(enclave).getPublicKeys();
         verify(enclave).findInvalidSecurityHashes(any(), any());
     }
 
     @Test
-    public void resendAllWhereRequestedIsSenderAndRecipientExists() {
-
-        final byte[] encodedData = "transaction".getBytes();
-        final EncryptedTransaction tx = new EncryptedTransaction(mock(MessageHash.class), encodedData);
-
-        final EncodedPayload payload = mock(EncodedPayload.class);
-        final PublicKey senderKey = PublicKey.from("PUBLICKEY".getBytes());
-        final PublicKey recipientKey = PublicKey.from("RECIPIENTKEY".getBytes());
-
-        when(payload.getPrivacyMode()).thenReturn(PrivacyMode.STANDARD_PRIVATE);
-        when(payload.getSenderKey()).thenReturn(senderKey);
-        when(payload.getRecipientKeys()).thenReturn(new ArrayList<>());
-        when(encryptedTransactionDAO.retrieveTransactions(anyInt(), anyInt())).thenReturn(singletonList(tx));
-        when(encryptedTransactionDAO.transactionCount()).thenReturn(1L);
-        when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
-        when(payloadEncoder.withRecipient(any(), any())).thenReturn(payload);
-        when(enclave.getPublicKeys()).thenReturn(singleton(recipientKey));
-        when(enclave.unencryptTransaction(payload, recipientKey)).thenReturn(new byte[0]);
-
-        final com.quorum.tessera.transaction.ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withRecipient(senderKey)
-                        .withType(ResendRequest.ResendRequestType.ALL)
-                        .build();
-
-        com.quorum.tessera.transaction.ResendResponse result = transactionManager.resend(resendRequest);
-
-        assertThat(result).isNotNull();
-
-        verify(encryptedTransactionDAO).retrieveTransactions(anyInt(), anyInt());
-        verify(encryptedTransactionDAO, times(2)).transactionCount();
-        verify(payloadEncoder).decode(encodedData);
-        verify(payloadPublisher).publishPayload(any(EncodedPayload.class), eq(senderKey));
-        verify(enclave, times(2)).getPublicKeys();
-        verify(enclave).unencryptTransaction(payload, recipientKey);
-        verify(payloadEncoder, never()).forRecipient(any(EncodedPayload.class), any(PublicKey.class));
-        verify(payloadEncoder).withRecipient(any(EncodedPayload.class), any(PublicKey.class));
-    }
-
-    @Test
-    public void resendAllWhereRequestedIsSenderAndRecipientsListIsNotEmpty() {
-
-        final byte[] encodedData = "transaction".getBytes();
-        final EncryptedTransaction tx = new EncryptedTransaction(mock(MessageHash.class), encodedData);
-
-        final EncodedPayload payload = mock(EncodedPayload.class);
-        final PublicKey senderKey = PublicKey.from("PUBLICKEY".getBytes());
-        final PublicKey recipientKey = PublicKey.from("RECIPIENTKEY".getBytes());
-
-        when(payload.getPrivacyMode()).thenReturn(PrivacyMode.STANDARD_PRIVATE);
-        when(payload.getSenderKey()).thenReturn(senderKey);
-        when(payload.getRecipientKeys()).thenReturn(Collections.singletonList(recipientKey));
-        when(encryptedTransactionDAO.retrieveTransactions(anyInt(), anyInt())).thenReturn(singletonList(tx));
-        when(encryptedTransactionDAO.transactionCount()).thenReturn(1L);
-        when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
-
-        final ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withType(ResendRequest.ResendRequestType.ALL)
-                        .withRecipient(senderKey)
-                        .build();
-
-        ResendResponse result = transactionManager.resend(resendRequest);
-
-        assertThat(result).isNotNull();
-
-        verify(encryptedTransactionDAO).retrieveTransactions(anyInt(), anyInt());
-        verify(encryptedTransactionDAO, times(2)).transactionCount();
-        verify(payloadEncoder).decode(encodedData);
-        verify(payloadPublisher).publishPayload(any(EncodedPayload.class), eq(senderKey));
-        verify(enclave).getPublicKeys();
-        verify(payloadEncoder, never()).forRecipient(any(EncodedPayload.class), any(PublicKey.class));
-        verify(payloadEncoder, never()).withRecipient(any(EncodedPayload.class), any(PublicKey.class));
-    }
-
-    @Test
-    public void resendAllWithNoValidTransactions() {
-
-        final PublicKey recipientKey = PublicKey.from("RECIPIENTKEY".getBytes());
-        final byte[] encodedData = "transaction".getBytes();
-
-        final EncryptedTransaction tx = new EncryptedTransaction(mock(MessageHash.class), encodedData);
-        final EncodedPayload payload = mock(EncodedPayload.class);
-        when(payload.getRecipientKeys()).thenReturn(emptyList());
-
-        when(encryptedTransactionDAO.retrieveTransactions(anyInt(), anyInt())).thenReturn(singletonList(tx));
-        when(encryptedTransactionDAO.transactionCount()).thenReturn(1L);
-        when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
-
-        final ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withRecipient(recipientKey)
-                        .withType(ResendRequest.ResendRequestType.ALL)
-                        .build();
-
-        ResendResponse result = transactionManager.resend(resendRequest);
-
-        assertThat(result).isNotNull();
-
-        verify(encryptedTransactionDAO).retrieveTransactions(anyInt(), anyInt());
-        verify(encryptedTransactionDAO, times(2)).transactionCount();
-        verify(payloadEncoder).decode(encodedData);
-    }
-
-    @Test
-    public void resendAllWhereRequestedIsRecipient() {
-
-        final PublicKey recipientKey = PublicKey.from("RECIPIENTKEY".getBytes());
-        final byte[] encodedData = "transaction".getBytes();
-        final EncryptedTransaction tx = new EncryptedTransaction(mock(MessageHash.class), encodedData);
-        final EncodedPayload payload = mock(EncodedPayload.class);
-        when(payload.getRecipientKeys()).thenReturn(singletonList(recipientKey));
-
-        when(encryptedTransactionDAO.retrieveTransactions(anyInt(), anyInt())).thenReturn(singletonList(tx));
-        when(encryptedTransactionDAO.transactionCount()).thenReturn(1L);
-
-        when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
-        when(payloadEncoder.forRecipient(payload, recipientKey)).thenReturn(payload);
-
-        final ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withType(ResendRequest.ResendRequestType.ALL)
-                        .withRecipient(recipientKey)
-                        .build();
-
-        ResendResponse result = transactionManager.resend(resendRequest);
-
-        assertThat(result).isNotNull();
-
-        verify(encryptedTransactionDAO).retrieveTransactions(anyInt(), anyInt());
-        verify(encryptedTransactionDAO, times(2)).transactionCount();
-        verify(payloadEncoder).decode(encodedData);
-        verify(payloadEncoder).forRecipient(payload, recipientKey);
-        verify(payloadPublisher).publishPayload(any(EncodedPayload.class), eq(recipientKey));
-        verify(enclave).getPublicKeys();
-    }
-
-    @Test
-    public void resendAllWhereRecipientInKeyList() {
-
-        final PublicKey recipientKey = PublicKey.from("RECIPIENTKEY".getBytes());
-        final byte[] encodedData = "transaction".getBytes();
-        final EncryptedTransaction tx = new EncryptedTransaction(mock(MessageHash.class), encodedData);
-        final EncodedPayload payload = mock(EncodedPayload.class);
-        when(payload.getRecipientKeys()).thenReturn(singletonList(recipientKey));
-
-        when(encryptedTransactionDAO.retrieveTransactions(anyInt(), anyInt())).thenReturn(singletonList(tx));
-        when(encryptedTransactionDAO.transactionCount()).thenReturn(1L);
-
-        when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
-        when(payloadEncoder.forRecipient(payload, recipientKey)).thenReturn(payload);
-
-        when(enclave.getPublicKeys()).thenReturn(singleton(recipientKey));
-
-        final ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withRecipient(recipientKey)
-                        .withType(ResendRequest.ResendRequestType.ALL)
-                        .build();
-
-        ResendResponse result = transactionManager.resend(resendRequest);
-
-        assertThat(result).isNotNull();
-
-        verify(encryptedTransactionDAO).retrieveTransactions(anyInt(), anyInt());
-        verify(encryptedTransactionDAO, times(2)).transactionCount();
-        verify(payloadEncoder).decode(encodedData);
-        verify(payloadEncoder).forRecipient(payload, recipientKey);
-
-        verify(enclave).getPublicKeys();
-    }
-
-    @Test
-    public void resendAllWhereRequestedIsRecipientThenPublishedPayloadDoesNotContainDataForOtherRecipients() {
-
-        final byte[] encodedData = "transaction".getBytes();
-        final EncryptedTransaction tx = new EncryptedTransaction(mock(MessageHash.class), encodedData);
-        final EncodedPayload payload = mock(EncodedPayload.class);
-
-        final PublicKey recipientKey = PublicKey.from("RECIPIENTKEY".getBytes());
-        final PublicKey anotherRecipient = PublicKey.from("ANOTHERRECIPIENT".getBytes());
-        final List<PublicKey> recipients = List.of(recipientKey, anotherRecipient);
-
-        final RecipientBox recipientBox = RecipientBox.from("box1".getBytes());
-        final RecipientBox anotherRecipientBox = RecipientBox.from("box2".getBytes());
-
-        final List<RecipientBox> recipientBoxes = List.of(recipientBox, anotherRecipientBox);
-
-        when(payload.getRecipientKeys()).thenReturn(recipients);
-        when(payload.getRecipientBoxes()).thenReturn(recipientBoxes);
-
-        when(encryptedTransactionDAO.retrieveTransactions(anyInt(), anyInt())).thenReturn(singletonList(tx));
-        when(encryptedTransactionDAO.transactionCount()).thenReturn(1L);
-
-        when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
-
-        EncodedPayload prunedPayload = mock(EncodedPayload.class);
-        when(prunedPayload.getRecipientKeys()).thenReturn(singletonList(recipientKey));
-        when(prunedPayload.getRecipientBoxes()).thenReturn(singletonList(recipientBox));
-        when(payloadEncoder.forRecipient(payload, recipientKey)).thenReturn(prunedPayload);
-
-        final ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withRecipient(recipientKey)
-                        .withType(ResendRequest.ResendRequestType.ALL)
-                        .build();
-
-        ResendResponse result = transactionManager.resend(resendRequest);
-
-        assertThat(result).isNotNull();
-        verify(payloadPublisher).publishPayload(eq(prunedPayload), eq(recipientKey));
-
-        verify(encryptedTransactionDAO).retrieveTransactions(anyInt(), anyInt());
-        verify(encryptedTransactionDAO, times(2)).transactionCount();
-        verify(payloadEncoder).forRecipient(payload, recipientKey);
-        verify(payloadEncoder).decode(encodedData);
-        verify(enclave).getPublicKeys();
-    }
-
-    @Test
-    public void resendAllWhereRequestedIsSenderThenPublishedPayloadIsNotPruned() {
-
-        final byte[] encodedData = "transaction".getBytes();
-        final EncryptedTransaction tx = new EncryptedTransaction(mock(MessageHash.class), encodedData);
-        final EncodedPayload payload = mock(EncodedPayload.class);
-
-        final RecipientBox recipientBox = RecipientBox.from("box1".getBytes());
-        final List<RecipientBox> recipientBoxes = List.of(recipientBox);
-
-        final PublicKey localKey = PublicKey.from("LOCAL_KEY".getBytes());
-        final PublicKey senderKey = PublicKey.from("SENDER".getBytes());
-
-        final List<PublicKey> recipients = new ArrayList<>();
-
-        when(payload.getPrivacyMode()).thenReturn(PrivacyMode.STANDARD_PRIVATE);
-        when(payload.getSenderKey()).thenReturn(senderKey);
-        when(payload.getRecipientKeys()).thenReturn(recipients);
-        when(payload.getRecipientBoxes()).thenReturn(recipientBoxes);
-        when(payload.getCipherText()).thenReturn("ciphertext".getBytes());
-
-        when(encryptedTransactionDAO.retrieveTransactions(anyInt(), anyInt())).thenReturn(singletonList(tx));
-        when(encryptedTransactionDAO.transactionCount()).thenReturn(1L);
-        when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
-        when(payloadEncoder.withRecipient(any(EncodedPayload.class), any(PublicKey.class))).thenReturn(payload);
-        when(enclave.getPublicKeys()).thenReturn(singleton(localKey));
-
-        final com.quorum.tessera.transaction.ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withType(ResendRequest.ResendRequestType.ALL)
-                        .withRecipient(senderKey)
-                        .build();
-
-        com.quorum.tessera.transaction.ResendResponse result = transactionManager.resend(resendRequest);
-
-        assertThat(result).isNotNull();
-        ArgumentCaptor<EncodedPayload> epAC = ArgumentCaptor.forClass(EncodedPayload.class);
-        verify(payloadPublisher).publishPayload(epAC.capture(), eq(senderKey));
-        EncodedPayload ep = epAC.getValue();
-        verify(payloadEncoder).withRecipient(payload, localKey);
-        assertThat(ep.getRecipientBoxes()).hasSize(1).containsExactly(recipientBox);
-        assertThat(ep.getSenderKey()).isEqualTo(senderKey);
-        assertThat(ep.getCipherText()).containsExactly("ciphertext".getBytes());
-        verify(payloadEncoder, never()).forRecipient(any(EncodedPayload.class), any(PublicKey.class));
-
-        verify(encryptedTransactionDAO).retrieveTransactions(anyInt(), anyInt());
-        verify(encryptedTransactionDAO, times(2)).transactionCount();
-        verify(payloadEncoder).decode(encodedData);
-        verify(enclave, times(2)).getPublicKeys();
-        verify(enclave).unencryptTransaction(payload, localKey);
-    }
-
-    @Test
-    public void resendAllWhereRequestedIsSenderAndRecipientDoesntExist() {
-
-        final byte[] encodedData = "transaction".getBytes();
-        final EncryptedTransaction tx = new EncryptedTransaction(mock(MessageHash.class), encodedData);
-        final EncodedPayload payload = mock(EncodedPayload.class);
-        final PublicKey senderKey = PublicKey.from("PUBLICKEY".getBytes());
-
-        when(payload.getSenderKey()).thenReturn(senderKey);
-        when(payload.getCipherText()).thenReturn("CIPHERTEXT".getBytes());
-        when(encryptedTransactionDAO.retrieveTransactions(anyInt(), anyInt())).thenReturn(singletonList(tx));
-        when(encryptedTransactionDAO.transactionCount()).thenReturn(1L);
-        when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
-        when(payload.getRecipientKeys()).thenReturn(new ArrayList<>());
-        when(enclave.getPublicKeys()).thenReturn(emptySet());
-
-        final ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withRecipient(senderKey)
-                        .withType(ResendRequest.ResendRequestType.ALL)
-                        .build();
-
-        final Throwable throwable = catchThrowable(() -> transactionManager.resend(resendRequest));
-
-        assertThat(throwable)
-                .isInstanceOf(RecipientKeyNotFoundException.class)
-                .hasMessage("No key found as recipient of message Q0lQSEVSVEVYVA==");
-
-        verify(encryptedTransactionDAO).retrieveTransactions(anyInt(), anyInt());
-        verify(encryptedTransactionDAO, times(1)).transactionCount();
-        verify(payloadEncoder).decode(encodedData);
-        verify(enclave).getPublicKeys();
-    }
-
-    @Test
-    public void resendAllWithOnePayloadAndOneRecipientThenPublishPayloadExceptionIsCaught() {
-
-        EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
-        List<EncryptedTransaction> allDbTransactions = Collections.singletonList(encryptedTransaction);
-
-        when(encryptedTransactionDAO.retrieveTransactions(anyInt(), anyInt())).thenReturn(allDbTransactions);
-        when(encryptedTransactionDAO.transactionCount()).thenReturn((long) allDbTransactions.size());
-
-        byte[] transactionBytes = "TRANSACTION".getBytes();
-        when(encryptedTransaction.getEncodedPayload()).thenReturn(transactionBytes);
-
-        EncodedPayload encodedPayload = mock(EncodedPayload.class);
-        when(payloadEncoder.decode(any())).thenReturn(encodedPayload);
-
-        byte[] publicKeyBytes = "PUBLICKEY".getBytes();
-        PublicKey publicKey = PublicKey.from(publicKeyBytes);
-        when(encodedPayload.getRecipientKeys()).thenReturn(Collections.singletonList(publicKey));
-
-        final ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withRecipient(publicKey)
-                        .withType(ResendRequest.ResendRequestType.ALL)
-                        .build();
-
-        when(payloadEncoder.forRecipient(eq(encodedPayload), any(PublicKey.class))).thenReturn(encodedPayload);
-
-        doThrow(new PublishPayloadException("msg")).when(payloadPublisher).publishPayload(encodedPayload, publicKey);
-
-        transactionManager.resend(resendRequest);
-
-        verify(payloadPublisher).publishPayload(encodedPayload, publicKey);
-        verify(payloadEncoder).decode(any(byte[].class));
-        verify(payloadEncoder).forRecipient(any(EncodedPayload.class), any(PublicKey.class));
-        verify(encryptedTransactionDAO).retrieveTransactions(anyInt(), anyInt());
-        verify(encryptedTransactionDAO, times(2)).transactionCount();
-        verify(enclave).getPublicKeys();
-    }
-
-    @Test
-    public void resendAllIfTwoPayloadsAndFirstThrowsExceptionThenSecondIsStillPublished() {
-        EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
-        EncryptedTransaction otherEncryptedTransaction = mock(EncryptedTransaction.class);
-        List<EncryptedTransaction> allDbTransactions = Arrays.asList(encryptedTransaction, otherEncryptedTransaction);
-
-        when(encryptedTransactionDAO.retrieveTransactions(anyInt(), anyInt())).thenReturn(allDbTransactions);
-        when(encryptedTransactionDAO.transactionCount()).thenReturn((long) allDbTransactions.size());
-
-        byte[] transactionBytes = "TRANSACTION".getBytes();
-        byte[] otherTransactionBytes = "OTHER_TRANSACTION".getBytes();
-        when(encryptedTransaction.getEncodedPayload()).thenReturn(transactionBytes);
-        when(otherEncryptedTransaction.getEncodedPayload()).thenReturn(otherTransactionBytes);
-
-        EncodedPayload encodedPayload = mock(EncodedPayload.class);
-        EncodedPayload otherEncodedPayload = mock(EncodedPayload.class);
-        when(payloadEncoder.decode(transactionBytes)).thenReturn(encodedPayload);
-        when(payloadEncoder.decode(otherTransactionBytes)).thenReturn(otherEncodedPayload);
-
-        byte[] publicKeyBytes = "PUBLICKEY".getBytes();
-
-        PublicKey publicKey = PublicKey.from(publicKeyBytes);
-        when(encodedPayload.getRecipientKeys()).thenReturn(Collections.singletonList(publicKey));
-        when(otherEncodedPayload.getRecipientKeys()).thenReturn(Collections.singletonList(publicKey));
-
-        final ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withRecipient(publicKey)
-                        .withType(ResendRequest.ResendRequestType.ALL)
-                        .build();
-
-        when(payloadEncoder.forRecipient(eq(encodedPayload), any(PublicKey.class))).thenReturn(encodedPayload);
-        when(payloadEncoder.forRecipient(eq(otherEncodedPayload), any(PublicKey.class)))
-                .thenReturn(otherEncodedPayload);
-
-        doThrow(new PublishPayloadException("msg")).when(payloadPublisher).publishPayload(encodedPayload, publicKey);
-
-        transactionManager.resend(resendRequest);
-
-        verify(payloadPublisher).publishPayload(encodedPayload, publicKey);
-        verify(payloadPublisher).publishPayload(otherEncodedPayload, publicKey);
-        verify(payloadEncoder, times(2)).decode(any(byte[].class));
-        verify(payloadEncoder, times(2)).forRecipient(any(EncodedPayload.class), any(PublicKey.class));
-        verify(encryptedTransactionDAO).retrieveTransactions(anyInt(), anyInt());
-        verify(encryptedTransactionDAO, times(2)).transactionCount();
-        verify(enclave, times(2)).getPublicKeys();
-    }
-
-    @Test
-    public void resendAllTwoPayloadsAndTwoRecipientsAllThrowExceptionButAllStillPublished() {
-        EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
-        EncryptedTransaction otherEncryptedTransaction = mock(EncryptedTransaction.class);
-        List<EncryptedTransaction> allDbTransactions = Arrays.asList(encryptedTransaction, otherEncryptedTransaction);
-
-        when(encryptedTransactionDAO.retrieveTransactions(anyInt(), anyInt())).thenReturn(allDbTransactions);
-        when(encryptedTransactionDAO.transactionCount()).thenReturn((long) allDbTransactions.size());
-
-        byte[] transactionBytes = "TRANSACTION".getBytes();
-        byte[] otherTransactionBytes = "OTHER_TRANSACTION".getBytes();
-        when(encryptedTransaction.getEncodedPayload()).thenReturn(transactionBytes);
-        when(otherEncryptedTransaction.getEncodedPayload()).thenReturn(otherTransactionBytes);
-
-        EncodedPayload encodedPayload = mock(EncodedPayload.class);
-        EncodedPayload otherEncodedPayload = mock(EncodedPayload.class);
-        when(payloadEncoder.decode(transactionBytes)).thenReturn(encodedPayload);
-        when(payloadEncoder.decode(otherTransactionBytes)).thenReturn(otherEncodedPayload);
-
-        byte[] publicKeyBytes = "PUBLICKEY".getBytes();
-        PublicKey publicKey = PublicKey.from(publicKeyBytes);
-        when(encodedPayload.getRecipientKeys()).thenReturn(Collections.singletonList(publicKey));
-        when(otherEncodedPayload.getRecipientKeys()).thenReturn(Collections.singletonList(publicKey));
-
-        when(payloadEncoder.forRecipient(encodedPayload, publicKey)).thenReturn(encodedPayload);
-        when(payloadEncoder.forRecipient(otherEncodedPayload, publicKey)).thenReturn(otherEncodedPayload);
-
-        final ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withRecipient(publicKey)
-                        .withType(ResendRequest.ResendRequestType.ALL)
-                        .build();
-
-        doThrow(new PublishPayloadException("msg")).when(payloadPublisher).publishPayload(encodedPayload, publicKey);
-
-        doThrow(new PublishPayloadException("msg"))
-                .when(payloadPublisher)
-                .publishPayload(otherEncodedPayload, publicKey);
-
-        transactionManager.resend(resendRequest);
-
-        verify(encryptedTransactionDAO).retrieveTransactions(anyInt(), anyInt());
-        verify(encryptedTransactionDAO, times(2)).transactionCount();
-        verify(payloadPublisher).publishPayload(encodedPayload, publicKey);
-        verify(payloadPublisher).publishPayload(otherEncodedPayload, publicKey);
-        verify(payloadEncoder, times(2)).decode(any(byte[].class));
-        verify(payloadEncoder, times(2)).forRecipient(any(EncodedPayload.class), any(PublicKey.class));
-        verify(payloadPublisher, times(2)).publishPayload(any(EncodedPayload.class), any(PublicKey.class));
-        verify(enclave, times(2)).getPublicKeys();
-    }
-
-    @Test
-    public void resendIndividualNoExistingTransactionFound() {
-
-        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class))).thenReturn(Optional.empty());
-
-        String publicKeyData = Base64.getEncoder().encodeToString("PUBLICKEY".getBytes());
-        PublicKey recipientKey = PublicKey.from(publicKeyData.getBytes());
-
-        MessageHash transactionHash = mock(MessageHash.class);
-        when(transactionHash.getHashBytes()).thenReturn("KEY".getBytes());
-
-        final ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withRecipient(recipientKey)
-                        .withHash(transactionHash)
-                        .withType(ResendRequest.ResendRequestType.INDIVIDUAL)
-                        .build();
-
-        try {
-            transactionManager.resend(resendRequest);
-            failBecauseExceptionWasNotThrown(TransactionNotFoundException.class);
-        } catch (TransactionNotFoundException ex) {
-            verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
-        }
-    }
-
-    @Test
-    public void resendIndividual() {
-
-        final byte[] encodedPayloadData = "getRecipientKeys".getBytes();
-        final EncryptedTransaction encryptedTransaction = new EncryptedTransaction(null, encodedPayloadData);
-
+    public void storePayloadWithExistingRecipientAndMismatchedContents() {
+        EncryptedTransaction existingDatabaseEntry =
+                new EncryptedTransaction(new MessageHash(new byte[0]), new byte[0]);
+        EncodedPayload existingPayload = EncodedPayload.Builder.create().withCipherText("ct1".getBytes()).build();
+        when(payloadEncoder.decode(any())).thenReturn(existingPayload);
         when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
-                .thenReturn(Optional.of(encryptedTransaction));
+                .thenReturn(Optional.of(existingDatabaseEntry));
 
-        final EncodedPayload encodedPayload = mock(EncodedPayload.class);
-        when(encodedPayload.getRecipientBoxes())
-                .thenReturn(singletonList(RecipientBox.from("RECIPIENTBOX".getBytes())));
+        EncodedPayload payloadToStore = EncodedPayload.Builder.create().withCipherText("ct2".getBytes()).build();
 
-        byte[] encodedOutcome = "SUCCESS".getBytes();
-        PublicKey recipientKey = PublicKey.from("PUBLICKEY".getBytes());
+        final Throwable throwable = catchThrowable(() -> transactionManager.storePayload(payloadToStore));
 
-        when(payloadEncoder.decode(encodedPayloadData)).thenReturn(encodedPayload);
-        when(payloadEncoder.forRecipient(encodedPayload, recipientKey)).thenReturn(encodedPayload);
-
-        MessageHash transactionHash = mock(MessageHash.class);
-        when(transactionHash.getHashBytes()).thenReturn("KEY".getBytes());
-
-        final ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withRecipient(recipientKey)
-                        .withHash(transactionHash)
-                        .withType(ResendRequest.ResendRequestType.INDIVIDUAL)
-                        .build();
-
-        ResendResponse result = transactionManager.resend(resendRequest);
-
-        assertThat(result).isNotNull();
-        assertThat(result.getPayload()).isSameAs(encodedPayload);
+        assertThat(throwable).isInstanceOf(RuntimeException.class).hasMessage("Invalid existing transaction");
 
         verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
-        verify(payloadEncoder).decode(encodedPayloadData);
-        verify(payloadEncoder).forRecipient(encodedPayload, recipientKey);
+        verify(payloadEncoder).decode(any());
+        verify(enclave).getPublicKeys();
+        verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
     }
 
     @Test
-    public void resendIndividualAsSender() {
-
-        final byte[] encodedPayloadData = "getRecipientKeys".getBytes();
-        final EncryptedTransaction encryptedTransaction = new EncryptedTransaction(null, encodedPayloadData);
-
-        byte[] encodedOutcome = "SUCCESS".getBytes();
-        PublicKey senderKey = PublicKey.from("PUBLICKEY".getBytes());
-        PublicKey recipientKey = PublicKey.from("RECIPIENTKEY".getBytes());
-
-        final EncodedPayload encodedPayload = mock(EncodedPayload.class);
-
-        when(encodedPayload.getSenderKey()).thenReturn(senderKey);
-        when(encodedPayload.getRecipientBoxes())
-                .thenReturn(singletonList(RecipientBox.from("RECIPIENTBOX".getBytes())));
-        when(encodedPayload.getRecipientKeys()).thenReturn(new ArrayList<>());
-
+    public void storePayloadWithExistingRecipientPSVRecipientNotFound() {
+        EncryptedTransaction existingDatabaseEntry =
+                new EncryptedTransaction(new MessageHash(new byte[0]), new byte[0]);
+        EncodedPayload existingPayload =
+                EncodedPayload.Builder.create()
+                        .withCipherText("ct1".getBytes())
+                        .withPrivacyMode(PrivacyMode.PRIVATE_STATE_VALIDATION)
+                        .build();
+        when(payloadEncoder.decode(any())).thenReturn(existingPayload);
         when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
-                .thenReturn(Optional.of(encryptedTransaction));
-        when(payloadEncoder.decode(encodedPayloadData)).thenReturn(encodedPayload);
-        when(enclave.getPublicKeys()).thenReturn(singleton(recipientKey));
-        when(enclave.unencryptTransaction(any(), any())).thenReturn(new byte[0]);
+                .thenReturn(Optional.of(existingDatabaseEntry));
 
-        MessageHash transactionHash = mock(MessageHash.class);
-        when(transactionHash.getHashBytes()).thenReturn("KEY".getBytes());
-
-        final ResendRequest resendRequest =
-                ResendRequest.Builder.create()
-                        .withRecipient(senderKey)
-                        .withHash(transactionHash)
-                        .withType(ResendRequest.ResendRequestType.INDIVIDUAL)
+        EncodedPayload payloadToStore =
+                EncodedPayload.Builder.create()
+                        .withCipherText("ct1".getBytes())
+                        .withPrivacyMode(PrivacyMode.PRIVATE_STATE_VALIDATION)
+                        .withRecipientKey(PublicKey.from("recipient1".getBytes()))
+                        .withRecipientBox("recipient_box1".getBytes())
                         .build();
 
-        final ResendResponse result = transactionManager.resend(resendRequest);
+        final Throwable throwable = catchThrowable(() -> transactionManager.storePayload(payloadToStore));
 
-        assertThat(result).isNotNull();
-        assertThat(result.getPayload()).isNotNull();
+        assertThat(throwable).isInstanceOf(RuntimeException.class).hasMessage("expected recipient not found");
 
         verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
-        verify(payloadEncoder).decode(encodedPayloadData);
+        verify(payloadEncoder).decode(any());
         verify(enclave).getPublicKeys();
-        verify(enclave).unencryptTransaction(any(), any());
+        verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
+    }
+
+    @Test
+    public void storePayloadWithExistingRecipientPSV() {
+        privacyHelper = mock(PrivacyHelper.class);
+        transactionManager =
+                new TransactionManagerImpl(
+                        Base64Codec.create(),
+                        payloadEncoder,
+                        encryptedTransactionDAO,
+                        batchPayloadPublisher,
+                        enclave,
+                        encryptedRawTransactionDAO,
+                        resendManager,
+                        privacyHelper);
+
+        when(privacyHelper.validatePayload(any(), any(), any())).thenReturn(true);
+
+        PublicKey recipient1 = PublicKey.from("recipient1".getBytes());
+        PublicKey recipient2 = PublicKey.from("recipient2".getBytes());
+
+        EncryptedTransaction existingDatabaseEntry =
+                new EncryptedTransaction(new MessageHash(new byte[0]), new byte[0]);
+        EncodedPayload existingPayload =
+                EncodedPayload.Builder.create()
+                        .withCipherText("ct1".getBytes())
+                        .withPrivacyMode(PrivacyMode.PRIVATE_STATE_VALIDATION)
+                        .withAffectedContractTransactions(Map.of(TxHash.from(new byte[0]), new byte[0]))
+                        .withRecipientKeys(List.of(recipient1, recipient2))
+                        .build();
+        when(payloadEncoder.decode(any())).thenReturn(existingPayload);
+        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+                .thenReturn(Optional.of(existingDatabaseEntry));
+
+        EncodedPayload payloadToStore =
+                EncodedPayload.Builder.create()
+                        .withCipherText("ct1".getBytes())
+                        .withPrivacyMode(PrivacyMode.PRIVATE_STATE_VALIDATION)
+                        .withAffectedContractTransactions(Map.of(TxHash.from(new byte[0]), new byte[0]))
+                        .withRecipientKeys(List.of(recipient1, recipient2))
+                        .withRecipientBox("recipient_box1".getBytes())
+                        .build();
+
+        MessageHash response = transactionManager.storePayload(payloadToStore);
+
+        assertThat(response.toString()).isEqualTo("Y3Qx");
+
+        ArgumentCaptor<EncodedPayload> payloadCaptor = ArgumentCaptor.forClass(EncodedPayload.class);
+        verify(payloadEncoder).encode(payloadCaptor.capture());
+
+        EncodedPayload updatedTransaction = payloadCaptor.getValue();
+        assertThat(updatedTransaction.getRecipientKeys()).containsExactly(recipient1, recipient2);
+        assertThat(updatedTransaction.getRecipientBoxes())
+                .containsExactly(RecipientBox.from("recipient_box1".getBytes()));
+
+        verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
+        verify(encryptedTransactionDAO).update(existingDatabaseEntry);
+        verify(payloadEncoder).decode(any());
+        verify(enclave).getPublicKeys();
+        verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
+    }
+
+    @Test
+    public void storePayloadWithExistingRecipientNonPSV() {
+        PublicKey recipient1 = PublicKey.from("recipient1".getBytes());
+        PublicKey recipient2 = PublicKey.from("recipient2".getBytes());
+
+        EncryptedTransaction existingDatabaseEntry =
+                new EncryptedTransaction(new MessageHash(new byte[0]), new byte[0]);
+        EncodedPayload existingPayload =
+                EncodedPayload.Builder.create()
+                        .withCipherText("ct1".getBytes())
+                        .withPrivacyMode(PrivacyMode.STANDARD_PRIVATE)
+                        .withRecipientKeys(List.of(recipient1))
+                        .withRecipientBox("recipient_box1".getBytes())
+                        .build();
+        when(payloadEncoder.decode(any())).thenReturn(existingPayload);
+        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+                .thenReturn(Optional.of(existingDatabaseEntry));
+
+        EncodedPayload payloadToStore =
+                EncodedPayload.Builder.create()
+                        .withCipherText("ct1".getBytes())
+                        .withPrivacyMode(PrivacyMode.STANDARD_PRIVATE)
+                        .withRecipientKeys(List.of(recipient2))
+                        .withRecipientBox("recipient_box2".getBytes())
+                        .build();
+
+        MessageHash response = transactionManager.storePayload(payloadToStore);
+
+        assertThat(response.toString()).isEqualTo("Y3Qx");
+
+        ArgumentCaptor<EncodedPayload> payloadCaptor = ArgumentCaptor.forClass(EncodedPayload.class);
+        verify(payloadEncoder).encode(payloadCaptor.capture());
+
+        EncodedPayload updatedTransaction = payloadCaptor.getValue();
+        assertThat(updatedTransaction.getRecipientKeys()).containsExactly(recipient2, recipient1);
+        assertThat(updatedTransaction.getRecipientBoxes())
+                .containsExactly(
+                        RecipientBox.from("recipient_box2".getBytes()), RecipientBox.from("recipient_box1".getBytes()));
+
+        verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
+        verify(encryptedTransactionDAO).update(existingDatabaseEntry);
+        verify(payloadEncoder).decode(any());
+        verify(enclave).getPublicKeys();
+        verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
+    }
+
+    @Test
+    public void storePayloadWithDuplicateExistingRecipient() {
+        PublicKey recipient1 = PublicKey.from("recipient1".getBytes());
+
+        EncryptedTransaction existingDatabaseEntry =
+                new EncryptedTransaction(new MessageHash(new byte[0]), new byte[0]);
+
+        EncodedPayload existingPayload =
+                EncodedPayload.Builder.create()
+                        .withCipherText("ct1".getBytes())
+                        .withPrivacyMode(PrivacyMode.STANDARD_PRIVATE)
+                        .withRecipientKeys(List.of(recipient1))
+                        .withRecipientBox("recipient_box1".getBytes())
+                        .build();
+
+        when(payloadEncoder.decode(any())).thenReturn(existingPayload);
+        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+                .thenReturn(Optional.of(existingDatabaseEntry));
+
+        EncodedPayload payloadToStore =
+                EncodedPayload.Builder.create()
+                        .withCipherText("ct1".getBytes())
+                        .withPrivacyMode(PrivacyMode.STANDARD_PRIVATE)
+                        .withRecipientKeys(List.of(recipient1))
+                        .withRecipientBox("recipient_box1".getBytes())
+                        .build();
+
+        MessageHash response = transactionManager.storePayload(payloadToStore);
+
+        assertThat(response.toString()).isEqualTo("Y3Qx");
+
+        verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
+        verify(payloadEncoder).decode(any());
+        verify(enclave).getPublicKeys();
+        verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
+    }
+
+    @Test
+    public void storePayloadWithExistingRecipientLegacyNoRecipients() {
+        EncryptedTransaction existingDatabaseEntry =
+                new EncryptedTransaction(new MessageHash(new byte[0]), new byte[0]);
+        EncodedPayload existingPayload =
+                EncodedPayload.Builder.create()
+                        .withCipherText("ct1".getBytes())
+                        .withPrivacyMode(PrivacyMode.STANDARD_PRIVATE)
+                        .withRecipientBox("recipient_box1".getBytes())
+                        .build();
+        when(payloadEncoder.decode(any())).thenReturn(existingPayload);
+        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+                .thenReturn(Optional.of(existingDatabaseEntry));
+
+        EncodedPayload payloadToStore =
+                EncodedPayload.Builder.create()
+                        .withCipherText("ct1".getBytes())
+                        .withPrivacyMode(PrivacyMode.STANDARD_PRIVATE)
+                        .withRecipientBox("recipient_box2".getBytes())
+                        .build();
+
+        MessageHash response = transactionManager.storePayload(payloadToStore);
+
+        assertThat(response.toString()).isEqualTo("Y3Qx");
+
+        ArgumentCaptor<EncodedPayload> payloadCaptor = ArgumentCaptor.forClass(EncodedPayload.class);
+        verify(payloadEncoder).encode(payloadCaptor.capture());
+
+        EncodedPayload updatedTransaction = payloadCaptor.getValue();
+        assertThat(updatedTransaction.getRecipientKeys()).isEmpty();
+        assertThat(updatedTransaction.getRecipientBoxes())
+                .containsExactly(
+                        RecipientBox.from("recipient_box2".getBytes()), RecipientBox.from("recipient_box1".getBytes()));
+
+        verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
+        verify(encryptedTransactionDAO).update(existingDatabaseEntry);
+        verify(payloadEncoder).decode(any());
+        verify(enclave).getPublicKeys();
+        verify(enclave).findInvalidSecurityHashes(any(EncodedPayload.class), anyList());
     }
 
     @Test
     public void receive() {
+        PublicKey sender = PublicKey.from("sender".getBytes());
+        byte[] randomData = Base64.getEncoder().encode("odd-data".getBytes());
+        MessageHash messageHash = new MessageHash(randomData);
 
-        byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
+        ReceiveRequest receiveRequest =
+                ReceiveRequest.Builder.create()
+                        .withRecipient(mock(PublicKey.class))
+                        .withTransactionHash(messageHash)
+                        .build();
 
-        ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
-        MessageHash messageHash = mock(MessageHash.class);
-        when(messageHash.getHashBytes()).thenReturn(keyData);
-        when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
-        when(receiveRequest.getRecipient()).thenReturn(Optional.of(mock(PublicKey.class)));
-
-        EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, keyData);
+        EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, randomData);
 
         EncodedPayload payload = mock(EncodedPayload.class);
         when(payload.getExecHash()).thenReturn("execHash".getBytes());
         when(payload.getPrivacyMode()).thenReturn(PrivacyMode.PRIVATE_STATE_VALIDATION);
+        when(payload.getSenderKey()).thenReturn(sender);
         when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
 
         when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
@@ -1192,18 +864,107 @@ public class TransactionManagerTest {
         when(enclave.unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class))).thenReturn(expectedOutcome);
 
         PublicKey publicKey = mock(PublicKey.class);
-        when(enclave.getPublicKeys()).thenReturn(Collections.singleton(publicKey));
+        when(enclave.getPublicKeys()).thenReturn(Set.of(publicKey));
 
         ReceiveResponse receiveResponse = transactionManager.receive(receiveRequest);
 
         assertThat(receiveResponse).isNotNull();
-
+        assertThat(receiveResponse.sender()).isEqualTo(sender);
         assertThat(receiveResponse.getUnencryptedTransactionData()).isEqualTo(expectedOutcome);
 
         verify(payloadEncoder).decode(any(byte[].class));
         verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
         verify(enclave, times(2)).unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class));
         verify(enclave).getPublicKeys();
+    }
+
+    @Test
+    public void receiveWithRecipientsPresent() {
+        final PublicKey sender = PublicKey.from("sender".getBytes());
+        final PublicKey recipient1 = PublicKey.from("recipient1".getBytes());
+        final PublicKey recipient2 = PublicKey.from("recipient2".getBytes());
+
+        byte[] randomData = Base64.getEncoder().encode("odd-data".getBytes());
+        MessageHash messageHash = new MessageHash(randomData);
+
+        ReceiveRequest receiveRequest =
+                ReceiveRequest.Builder.create()
+                        .withRecipient(mock(PublicKey.class))
+                        .withTransactionHash(messageHash)
+                        .build();
+
+        EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, randomData);
+
+        EncodedPayload payload = mock(EncodedPayload.class);
+        when(payload.getExecHash()).thenReturn("execHash".getBytes());
+        when(payload.getPrivacyMode()).thenReturn(PrivacyMode.STANDARD_PRIVATE);
+        when(payload.getRecipientKeys()).thenReturn(List.of(recipient1, recipient2));
+        when(payload.getSenderKey()).thenReturn(sender);
+        when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
+
+        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+                .thenReturn(Optional.of(encryptedTransaction));
+
+        byte[] expectedOutcome = "Encrypted payload".getBytes();
+
+        when(enclave.unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class))).thenReturn(expectedOutcome);
+        when(enclave.getPublicKeys()).thenReturn(Set.of(recipient1, recipient2));
+
+        ReceiveResponse receiveResponse = transactionManager.receive(receiveRequest);
+
+        assertThat(receiveResponse).isNotNull();
+        assertThat(receiveResponse.getUnencryptedTransactionData()).isEqualTo(expectedOutcome);
+        assertThat(receiveResponse.getManagedParties()).containsExactlyInAnyOrder(recipient1, recipient2);
+        assertThat(receiveResponse.sender()).isEqualTo(sender);
+
+        verify(payloadEncoder).decode(any(byte[].class));
+        verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
+        verify(enclave, times(2)).unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class));
+        verify(enclave, times(2)).getPublicKeys();
+    }
+
+    @Test
+    public void receiveWithNoRecipientsPresent() {
+        final PublicKey sender = PublicKey.from("sender".getBytes());
+        final PublicKey recipient1 = PublicKey.from("recipient1".getBytes());
+
+        byte[] randomData = Base64.getEncoder().encode("odd-data".getBytes());
+        MessageHash messageHash = new MessageHash(randomData);
+
+        ReceiveRequest receiveRequest =
+                ReceiveRequest.Builder.create()
+                        .withRecipient(mock(PublicKey.class))
+                        .withTransactionHash(messageHash)
+                        .build();
+
+        EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, randomData);
+
+        EncodedPayload payload = mock(EncodedPayload.class);
+        when(payload.getSenderKey()).thenReturn(sender);
+        when(payload.getExecHash()).thenReturn("execHash".getBytes());
+        when(payload.getPrivacyMode()).thenReturn(PrivacyMode.STANDARD_PRIVATE);
+        when(payload.getRecipientBoxes()).thenReturn(List.of(RecipientBox.from("box1".getBytes())));
+        when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
+
+        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+                .thenReturn(Optional.of(encryptedTransaction));
+
+        byte[] expectedOutcome = "Encrypted payload".getBytes();
+
+        when(enclave.unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class))).thenReturn(expectedOutcome);
+        when(enclave.getPublicKeys()).thenReturn(Set.of(recipient1));
+
+        ReceiveResponse receiveResponse = transactionManager.receive(receiveRequest);
+
+        assertThat(receiveResponse).isNotNull();
+        assertThat(receiveResponse.getUnencryptedTransactionData()).isEqualTo(expectedOutcome);
+        assertThat(receiveResponse.getManagedParties()).containsExactly(recipient1);
+        assertThat(receiveResponse.sender()).isEqualTo(sender);
+
+        verify(payloadEncoder).decode(any(byte[].class));
+        verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
+        verify(enclave, times(3)).unencryptTransaction(any(EncodedPayload.class), any(PublicKey.class));
+        verify(enclave, times(2)).getPublicKeys();
     }
 
     @Test
@@ -1254,7 +1015,7 @@ public class TransactionManagerTest {
 
     @Test
     public void receiveWithAffectedContractTransactions() {
-
+        PublicKey sender = PublicKey.from("sender".getBytes());
         byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
         PublicKey recipient = PublicKey.from("recipient".getBytes());
         MessageHash messageHash = new MessageHash(keyData);
@@ -1273,6 +1034,7 @@ public class TransactionManagerTest {
         when(payload.getExecHash()).thenReturn("execHash".getBytes());
         when(payload.getPrivacyMode()).thenReturn(PrivacyMode.PRIVATE_STATE_VALIDATION);
         when(payload.getAffectedContractTransactions()).thenReturn(affectedTxs);
+        when(payload.getSenderKey()).thenReturn(sender);
 
         when(payloadEncoder.decode(any(byte[].class))).thenReturn(payload);
 
@@ -1293,6 +1055,7 @@ public class TransactionManagerTest {
         assertThat(receiveResponse.getUnencryptedTransactionData()).isEqualTo(expectedOutcome);
         assertThat(receiveResponse.getExecHash()).isEqualTo("execHash".getBytes());
         assertThat(receiveResponse.getAffectedTransactions()).hasSize(1);
+        assertThat(receiveResponse.sender()).isEqualTo(sender);
 
         verify(payloadEncoder).decode(any(byte[].class));
         verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
@@ -1557,22 +1320,20 @@ public class TransactionManagerTest {
         ServerConfig serverConfig = new ServerConfig();
         serverConfig.setCommunicationType(CommunicationType.REST);
         serverConfig.setApp(AppType.P2P);
-        config.setServerConfigs(Arrays.asList(serverConfig));
+        config.setServerConfigs(List.of(serverConfig));
 
-        serviceLocator.setServices(Stream.of(config, payloadPublisher, enclave).collect(Collectors.toSet()));
+        serviceLocator.setServices(Set.of(config, enclave));
 
         TransactionManager tm =
                 new TransactionManagerImpl(
                         Base64Codec.create(),
                         payloadEncoder,
                         encryptedTransactionDAO,
-                        payloadPublisher,
                         batchPayloadPublisher,
                         enclave,
                         encryptedRawTransactionDAO,
                         resendManager,
-                        privacyHelper,
-                        1000);
+                        privacyHelper);
 
         assertThat(tm).isNotNull();
     }
@@ -1696,10 +1457,44 @@ public class TransactionManagerTest {
         verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
     }
 
-
     @Test
     public void defaultPublicKey() {
         transactionManager.defaultPublicKey();
         verify(enclave).defaultPublicKey();
+    }
+
+    @Test
+    public void upcheckReturnsTrue() {
+
+        when(encryptedTransactionDAO.upcheck()).thenReturn(true);
+        when(encryptedRawTransactionDAO.upcheck()).thenReturn(true);
+
+        assertThat(transactionManager.upcheck()).isTrue();
+
+        verify(encryptedRawTransactionDAO).upcheck();
+        verify(encryptedTransactionDAO).upcheck();
+    }
+
+    @Test
+    public void upcheckReturnsFalseIfEncryptedTransactionDBFail() {
+
+        when(encryptedTransactionDAO.upcheck()).thenReturn(false);
+        when(encryptedRawTransactionDAO.upcheck()).thenReturn(true);
+
+        assertThat(transactionManager.upcheck()).isFalse();
+
+        verify(encryptedRawTransactionDAO).upcheck();
+        verify(encryptedTransactionDAO).upcheck();
+    }
+
+    @Test
+    public void upcheckReturnsFalseIfEncryptedRawTransactionDBFail() {
+
+        when(encryptedTransactionDAO.upcheck()).thenReturn(true);
+        when(encryptedRawTransactionDAO.upcheck()).thenReturn(false);
+
+        assertThat(transactionManager.upcheck()).isFalse();
+
+        verify(encryptedRawTransactionDAO).upcheck();
     }
 }
